--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
 
 <center>
-<img src="trescanehighres.png" alt="Trescane" style="width: 25%; height=25%"/>
+<img src="vikingfuneral.jpg" alt="Trescane" style="width: 25%; height=25%"/>
 
-<p style="font-family: Arial, Helvetica, sans-serif">making the world a better place</p>
+<p style="font-family: Arial, Helvetica, sans-serif">Trescane is shutting down. We made the world a place. So long.</p>
 </center>
 </body>
 </html>
